dom/storage/StorageDBThread.cpp
@@ -480,7 +480,6 @@ void StorageDBThread::ThreadFunc() {
       }
     } else if (MOZ_UNLIKELY(!mStopIOThread)) {
       AUTO_PROFILER_LABEL("StorageDBThread::ThreadFunc::Wait", IDLE);
-      AUTO_PROFILER_THREAD_SLEEP;
       lockMonitor.Wait(timeUntilFlush);
     }
   }  // thread loop
