xpcom/threads/nsThreadPool.cpp
@@ -274,10 +274,7 @@ nsThreadPool::Run() {
           TimeDuration delta = timeout - (now - idleSince);
           LOG(("THRD-P(%p) %s waiting [%f]\n", this, mName.BeginReading(),
                delta.ToMilliseconds()));
-          {
-            AUTO_PROFILER_THREAD_SLEEP;
-            mEventsAvailable.Wait(delta);
-          }
+          mEventsAvailable.Wait(delta);
           LOG(("THRD-P(%p) done waiting\n", this));
         }
       } else if (wasIdle) {
